# why_clinica

./: .gitignore  README.md  demo.py  environment.yml  pyproject.toml
notebooks/: demo.ipynb
